Tabs_N_Blanks/css/main.css
/*
  A CSS stylesheet created from Tabs N' Blanks, a hypothetical store selling 3D woodcraft puzzles, for the purpose of a web design course project

  CREATED BY: IAT339 D101 WINONA HUANG 301165181
                          JOANNE GOH 301140652;
*/


/* 
  DEFAULT STYLING
*/

  *, *::after, *::before {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
  }

  /* text elements */
  
  body {
    font-family: Avenir-Book;
    font-size: 16px;
    padding: 1rem;
  }

  /* Different Levels of Headings */
  h1 {
    font-family: AGaramond-Regular;
    font-size: 1.56rem;
    letter-spacing: 0.1rem;
    color: #5E5E5E; /* was originally #454545 on style guide */
    text-transform: uppercase;
  /*  margin-bottom: 0.5em; */
  }

  h2 {
    font-family: Avenir-Heavy;
    text-transform: uppercase;
    font-size: 1.20rem;
    letter-spacing: 0..025rem;
    color: #5E5E5E;
  /*  margin-bottom: 0.5em; */
  }

  h3 {
    font-family: Avenir-Medium;
    font-size: 1.125rem;
    letter-spacing: 0.05rem;
    color: #5e5e5e;
  /*  margin-bottom: 0.5em; */
  }

  h4 {
    font-family: Avenir-Roman;
    font-size: 0.875rem;
    letter-spacing: 0.05rem;
    color: #7d7d7d;
  /*  margin-bottom: 0.5em; */
  }

  p {
    font-family: Avenir-Book;
    font-size: .81rem;
    color: #5E5E5E;
  }


/* loading fonts */

  @font-face {
      font-family: AGaramond-Regular;
      src: url(fonts/AGaramondPro-Regular.otf);   
  }

  @font-face {
      font-family: AGaramond-Italics;
      src: url(fonts/AGaramondPro-Italic.otf);   
  }

  @font-face {
      font-family: Avenir-Heavy;
      src: url(fonts/Avenir-Heavy.ttf);   
  }

  @font-face {
      font-family: Avenir-Medium;
      src: url(fonts/Avenir-Medium.ttf);   
  }

  @font-face {
      font-family: Avenir-Roman;
      src: url(fonts/Avenir-Roman.ttf);   
  }

  @font-face {
      font-family: Avenir-Book;
      src: url(fonts/Avenir-Book.ttf);   
  }



/* 
  NAVIGATION MENU -----------------
*/

  /* Main Navigation Menu */
  ul.nav-menu {
    width: auto; /* width of underline */
  }

  ul.nav-menu {
    list-style: none;
    margin-top: 1em;
    padding: 0;
    line-height: 1;
    display: block;

    text-align: center;
  }

  ul.nav-menu li {
    display: inline-block;
    padding: 0;
    margin: 0;
  }

  ul.nav-menu.align-left li {
    float: left;
  }

  ul.nav-menu li a {
    color: #7D7D7D;
    text-decoration: none;
    display: block;
    padding: 0.8rem 1.5em;
    margin: 0 0.5rem;
    font-family: Avenir-Roman;
    letter-spacing: 0.15rem;
    font-size: 0.825rem;
    text-transform: uppercase;
    position: relative;
  }

  ul.nav-menu  li a:hover {
    color: #C1B087;
  } 

  ul.nav-menu li a:hover:before {
    width: 100%;
  }

  ul.nav-menu li a:before {
    content: "";
    display: block;
    position: absolute;
    left: 0;
    bottom: 0;
    height: 2px; /*stroke weight */
    width: 0;
    background: #C1B087;
    
    /*animation speed left to right*/
    -webkit-transition: width .25s;
    -moz-transition: width .25s;
    -ms-transition: width .25s;
    -o-transition: width .25s;
    transition: width .25s;
    
  }


  ul.nav-menu li.active a:before {
    width: 100%;
  }

  /* Indicate the Page that is currently active*/
  ul.nav-menu li.active a {
    color: #C1B087;
  }

  ul.nav-menu li.active a:before {
    color: #C1B087;
    width: 100%;
  }

/* yet to fix the media queries */
  @media (max-width: 40rem) {
    ul.nav-menu li {
      float: none;
      display: block;
    }

    ul.nav-menu li a {
      width: 100%;
      -moz-box-sizing: border-box;
      -webkit-box-sizing: border-box;
      box-sizing: border-box;
    }
  }

  /* Side Navigation Menu */
  .side-nav {
    text-align: right;
  }

  ul.nav-menu .side-nav li a {
    font-family: AGaramond-Regular;
    letter-spacing: 0.1rem;
    font-size: 0.75rem;
    text-transform: uppercase;
    position: relative;

    padding: 0.8rem 1em;

  }

  ul.nav-menu .side-nav li a:hover {
    color: #C1B087;

   }

  ul.nav-menu .side-nav li a:before {
    content: "";
    display: block;
    position: absolute;
    left: 0;
    bottom: 0;
    height: 0px; /* no stroke weight */
  }
  

/* 
  FOOTER 
  Refrence Retrieved from:
  http://www.lwis.net/journal/2008/02/08/pure-css-sticky-footer/
*/ 

  html, body, .container { 
    height: 100%; 
    margin: 0;
    padding: 0;
    
  }

  body > .container { 
    height: auto; 
    min-height: 100%; 
  }

  .footer {
    background-color: #F2EDE7;
    text-align: center;
    line-height: 2em; /* aligns text vertically in the middle; originally 3.5em */

    font-size: 0.875rem;
    clear: both;
    position: relative;
    z-index: 10;
    height: 4em;
    margin-top: -4em;

    width: 100%
  }

  /* filler for social media icons */
  .footer h3 {
    font-size: 0.75rem;
    text-align: center;
    display: inline-block;
  }

  /* copyright Tabs N' Blanks*/
  .footer p {
    font-size: 0.625rem;
    clar: float;
    float: right;
    display: inline-block;
  }

  .container { 
    padding-bottom: 4em; 
  }

